# shot-glass

./: .devcontainer.json  .env  README.md  shot-glass.code-workspace
docker/: dev.dockerfile  dev_requirements.txt  docker-compose.yml  prod.dockerfile  run_architecture.py  run_metrics.py  run_pytest.py  tox.ini
docker/config/: build.yaml  dev-env  prod_requirements.txt  pyproject.toml  zshrc
docker/config/jupyter/: jupyter_lab_config.py
docker/config/jupyter/lab/user-settings/@jupyterlab/apputils-extension/: notification.jupyterlab-settings
docker/config/jupyter/serverconfig/: jupyterlabapputilsextensionannouncements.json
docker/jupyter/: jupyter_lab_config.py
docker/scripts/: run_sphinx.py  x_tools.sh
docs/: .buildinfo  all_metrics.html  blender.html  cli.html  core.html  cyclomatic_complexity_metrics.html  genindex.html  halstead_metrics.html  hifive.html  index.html  intro.html  maintainability_metrics.html  modules.html  obj.html  objects.inv  plotly.html  py-modindex.html  raw_metrics.html  search.html  searchindex.js
docs/.doctrees/: blender.doctree  cli.doctree  core.doctree  environment.pickle  hifive.doctree  index.doctree  intro.doctree  modules.doctree  obj.doctree  plotly.doctree
docs/_modules/: cli.html  index.html  logging.html
docs/_modules/shot_glass/blender/: blender_tools.html
docs/_modules/shot_glass/core/: basic.html  (+4 more)
docs/_sources/: blender.rst.txt  core.rst.txt  hifive.rst.txt  index.rst.txt  modules.rst.txt  obj.rst.txt  plotly.rst.txt
docs/resources/: face.json
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml
notebooks/: dev.ipynb  geo_tools.ipynb
pip/: setup.py
python/: cli.py
python/shot_glass/: __init__.py  command.py
python/shot_glass/blender/: __init__.py  blender_tools.py  blender_tools_test.py
python/shot_glass/core/: __init__.py  basic.py  basic_test.py  df_monad.py  monad.py  monad_test.py  s_monad.py
python/shot_glass/hifive/: __init__.py  hifive.py  hifive_test.py  hifive_tools.py  hifive_tools_test.py  operator_tools.py  operator_tools_test.py  operators.py  operators_test.py  test_base.py  type_base.py  type_base_test.py  validators.py  validators_test.py
python/shot_glass/plotly/: __init__.py  plotly_tools.py  plotly_tools_test.py
resources/: monad.drawio
sphinx/: conf.py  core.rst  index.rst  intro.rst
(+8 files in other folders)
